Added helpers and skeleton code for new look and feel for verifications

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -262,3 +262,20 @@
     border: solid thin darken($color-privacy-yellow, 30);
     font-style: italic;
 }
+
+
+.verification-state-label {
+    margin-left: $standard-spacing;
+    font-size: 76%;
+    font-weight: normal;
+
+    &--missing {
+        color: red;
+    }
+
+    &--verified {
+        color: green;
+    }
+
+}
+
