Added helpers to get rejection reason

--- a/app/views/users/_verifications_list.html.erb
+++ b/app/views/users/_verifications_list.html.erb
@@ -44,9 +44,7 @@
                 <h5>Førerkort <%= verification_state_label current_user.drivers_license_status %></h5>
 
                 <% if current_user.drivers_license_status == :rejected %>
-                    <p>
-                        Ikke godkjent fordi lol
-                    </p>
+                    <p><strong>Årsak:</strong> <%= current_user.drivers_license_rejection_reason %></p>
                 <% end %>
 
                 <% if current_user.drivers_license_status == :missing || current_user.drivers_license_status == :rejected %>
