--- a/app/views/user_payment_cards/_list.html.erb
+++ b/app/views/user_payment_cards/_list.html.erb
@@ -1,18 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing User Payment Cards</h1>
+<h1>Dine Betalingskort</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>Number alias</th>
-      <th>Expiration date</th>
-      <th>Validity mp</th>
-      <th>Active mp</th>
-      <th></th>
-    </tr>
-  </thead>
-
   <tbody>
     <%= render @user_payment_cards %>
   </tbody>
@@ -20,4 +10,4 @@
 
 <br>
 
-<%= link_to 'New User payment card', new_user_payment_card_path %>
+<%= link_to 'Legg til', new_user_payment_card_path %>
