--- a/app/views/users/payment/_payout_wallet_balance.html.erb
+++ b/app/views/users/payment/_payout_wallet_balance.html.erb
@@ -1,1 +1,10 @@
-foo - payout_wallet_balance
+
+<%= render layout: "gray_box", locals: {title: "Din plendit Saldo", id: "payout_wallet_balance"} do %>
+
+<!--   foo - payout_wallet_balance -->
+
+  Din plendit Saldo: <b>xyz,-</b> NOK
+
+  <br>
+  overfør til din bankkonto
+<% end %>
