--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="two-thirds column">
                 <%= f.label :birthday, 'Fødselsdato:' %>
-                <%= f.date_select :birthday%>
+                <%= f.date_select :birthday, start_year: 1900 %>
             </div>
         </div>
 
