--- a/app/assets/stylesheets/_ad_booking_box.scss
+++ b/app/assets/stylesheets/_ad_booking_box.scss
@@ -5,7 +5,7 @@
     box-shadow: 0 0 1px rgba(black, 0.2),
                 0 1px 2px rgba(black, 0.3);
 
-    @media screen and (min-width: 640px) {
+    @media (min-width: $tablet) {
         top: -45px;
         left: -22px;
     }
