--- a/app/assets/stylesheets/_front_search_block.scss
+++ b/app/assets/stylesheets/_front_search_block.scss
@@ -41,7 +41,7 @@
         align-items: center;
         position: relative;
 
-        @media screen and (max-width: 640px) {
+        @media (max-width: $tablet) {
             margin: 2px;
         }
 
