Not using ".container" for search results page. Setting ".container" side padding to 2x $standard-spacing.

--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -34,7 +34,7 @@
   position: relative;
   width: $desktop;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 ($standard-spacing * 2);
   box-sizing: border-box;
 
   @media (min-width: $bigscreen) {
