--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <div class="result-container__hits-box" data-hits-view>
-        <div class="container search-title-box">
+        <div class="search-title-box">
             <h4 data-controller="hitCount">
                 Treff
                 <%= ((@ads.current_page - 1) * @ads.default_per_page) + 1 %>
