--- a/app/assets/stylesheets/_search_filter_section.scss
+++ b/app/assets/stylesheets/_search_filter_section.scss
@@ -1,8 +1,7 @@
 @import 'constants.scss';
 
 .search-filter-section {
-    padding-top: $standard-spacing / 2;
-    padding-bottom: $standard-spacing / 2;
+    padding: ($standard-spacing / 2) ($standard-spacing * 2);
 
     &__form {
         margin-bottom: 0;
