add support for managing bank accounts

--- a/app/views/users/payment.html.erb
+++ b/app/views/users/payment.html.erb
@@ -6,8 +6,9 @@
     <div class="row">
         <div class="eight columns">
             <%= render partial: "user_payment_cards/list" %>
-            <%#= render partial: "user_payment_account/index" %>
-
+            <hr>
+            <%= render partial: "users/show_user_payment_account" %>
+            <hr>
             <%#= render partial: "users/payment/transaction" %>
 
         </div>
