--- a/app/views/user_payment_cards/_form.html.erb
+++ b/app/views/user_payment_cards/_form.html.erb
@@ -49,7 +49,7 @@
 
             <div class="row">
                 <button type="submit" data-save-card class="u-pull-right button button-primary">Lagre kort</button>
-                <%= evil_icon  'ei-spinner-3', size: 'm', class: 'u-fill-blue u-pull-right u-hidden data-spinner', data: {spinner: ''} %>
+                <%= icon 'spinner', class: 'fa-2x fa-pulse u-fill-blue u-pull-right u-hidden data-spinner', data: {spinner: ''} %>
             </div>
 
             <div class="row">
