--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -64,7 +64,7 @@
             link_to "here", user_confirmation_path, method: :post, {email: @user.email} ###or similar?%>
                 <% else %>
                     <div>
-                        <%= evil_icon 'ei-check', size: :s, class: 'u-fill-green' %>
+                        <%= icon 'check-circle-o', class: 'fa-lg u-fill-green' %>
                         <small>E-postadressen er bekreftet!</small>
                     </div>
                 <% end %>
@@ -82,7 +82,7 @@
             <div class="twelve columns">
                 <% if @user.phone_pending_confirmation? %>
                     <div>
-                        <%= evil_icon 'ei-close-o', size: :s, class: "u-fill-red" %>
+                        <%= icon 'times-circle-o', class: "fa-lg u-fill-red" %>
                         <small>
                             Telefonnummer <%= @user.unconfirmed_phone_number %> er ikke bekreftet!
                             <% if not @user.unconfirmed_phone_number.blank? %>
@@ -94,7 +94,7 @@
                     </div>
                 <% else %>
                     <div>
-                        <%= evil_icon 'ei-check', size: :s, class: 'u-fill-green' %>
+                        <%= icon 'check-circle-o', class: 'fa-lg u-fill-green' %>
                         <small>Telefonnummeret er bekreftet!</small>
                     </div>
                 <% end %>
