add comments on how to move from evil icons to font awesome for social buttons. just switching over makes things look ugly, so leaving it commented out for now.

--- a/app/views/shared/_social_button.html.erb
+++ b/app/views/shared/_social_button.html.erb
@@ -1,6 +1,7 @@
 <span class="social-button <%= "social-button--#{network[:id]}" %>">
     <% if network.has_key? :icon %>
         <%= evil_icon network[:icon], size: 'm', class: 'u-fill-white' %>
+        <%#= icon network[:icon], class: 'fa-2x u-fill-white' %>
     <% else %>
         <%= image_tag network[:img], size: '45x45', alt: '', class: 'social-button__logo-image' %>
     <% end %>
