--- a/app/views/users/finish_signup.html.erb
+++ b/app/views/users/finish_signup.html.erb
@@ -1,22 +1,28 @@
-<div id="add-email" class="container">
-  <h1>Add e-post</h1>
-  <%= form_for(current_user, :as => 'user', :url => finish_signup_path(current_user), :html => { role: 'form'}) do |f| %>
-    <% if @show_errors && current_user.errors.any? %>
-      <div id="error_explanation">
-        <% current_user.errors.full_messages.each do |msg| %>
-          <%= msg %><br>
-        <% end %>
-      </div>
-    <% end %>
-    <div class="form-group">
-      <%= f.label :email %>
-      <div class="controls">
-        <%= f.text_field :email, :autofocus => true, :value => '', class: 'form-control input-lg', placeholder: 'Example: email@me.com' %>
-        <p class="help-block">Please confirm your email address. No spam.</p>
-      </div>
+<div class="container">
+    <div class="row">
+        <div class="eight columns">
+            <h1>Mangler e-post</h1>
+            <p>
+                Vi trenger en e-post adresse for at du kan logge inn.
+            </p>
+            <%= form_for(current_user, :as => 'user', :url => finish_signup_users_path(current_user), :html => { role: 'form'}) do |f| %>
+                <% if @show_errors && current_user.errors.any? %>
+                    <div id="error_explanation">
+                        <% current_user.errors.full_messages.each do |msg| %>
+                            <%= msg %><br>
+                        <% end %>
+                    </div>
+                <% end %>
+                <div class="form-group">
+                    <%= f.label :email, 'E-post:' %>
+                    <div class="controls">
+                        <%= f.text_field :email, :autofocus => true, :value => '', class: 'form-control input-lg', placeholder: 'bruker@example.org' %>
+                    </div>
+                </div>
+                <div class="actions">
+                    <%= f.submit 'Lagre', :class => 'button button-primary' %>
+                </div>
+            <% end %>
+        </div>
     </div>
-    <div class="actions">
-      <%= f.submit 'Continue', :class => 'btn btn-primary' %>
-    </div>
-  <% end %>
 </div>
