--- a/app/views/shared/_social_button.html.erb
+++ b/app/views/shared/_social_button.html.erb
@@ -1,10 +1,12 @@
 <span class="social-button <%= "social-button--#{network[:id]}" %>">
-    <% if network.has_key? :icon %>
-        <%= evil_icon network[:icon], size: 'm', class: 'u-fill-white' %>
-        <%#= icon network[:icon], class: 'fa-2x u-fill-white' %>
-    <% else %>
-        <%= image_tag network[:img], size: '45x45', alt: '', class: 'social-button__logo-image' %>
-    <% end %>
+    <span class="social-button__icon-holder">
+
+        <% if network.has_key? :icon %>
+            <%= icon network[:icon], class: 'u-fill-white fa-2x social-button__logo-icon' %>
+        <% else %>
+            <%= image_tag network[:img], size: '45x45', alt: '', class: 'social-button__logo-image' %>
+        <% end %>
+    </span>
     <span class="social-button__text">
         <%= text %>
     </span>
