show privacy box in edit_profile view, unless its in beta

--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -122,6 +122,7 @@
             <small>Vi trenger addressen som hører til bankkontoen din.</small>
         </p>
 
+        <%= render partial: 'privacy_box' unless Plendit::Application.config.x.application_mode.beta %>
 
 
         <div class="row u-push-down">
