Reducing global side padding (mostly visible on mobile). Adding padding to site header on mobile.

--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -13,6 +13,8 @@
         width: 100%;
         text-align: center;
         padding-top: 40px;
+        padding-left: $standard-spacing;
+        padding-right: $standard-spacing;
 
         @media (max-width: $desktop) {
             padding-top: 28px;
