--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -34,7 +34,7 @@
   position: relative;
   width: $desktop;
   margin: 0 auto;
-  padding: 0 ($standard-spacing * 2);
+  padding: 0 $standard-spacing;
   box-sizing: border-box;
 
   @media (min-width: $bigscreen) {
