--- a/app/views/users/payment.html.erb
+++ b/app/views/users/payment.html.erb
@@ -10,7 +10,7 @@
             <hr>
             <%= render partial: "users/show_user_payment_account" %>
             <hr>
-            <%#= render partial: "users/payment/transaction_list" %>
+            <%= render partial: "users/payment/transaction_list" %>
         </div>
 
         <div class="four columns">
